@@ -9,34 +9,42 @@ CFLAGS += -DPROJNAME='"$(PROJNAME)"' -DVERSION='"$(VERSION)"'
 CPPFLAGS =
 CXXFLAGS =
 
-SRC = util stock theme_sel font_sel preview_pane about_dialog mainwin main
+SRC = util.c stock.c theme_sel.c font_sel.c preview_pane.c about_dialog.c mainwin.c main.c
 
 EXTRAS = $(addprefix $(EXENAME), .spec .spec.in .pod .pod.in .1) \
 		 stock_menu_about.xpm Makefile Metadata replace COPYING ChangeLog
 
+.PHONY: all
 all: $(EXENAME) $(EXENAME).1
 
-$(EXENAME): $(addsuffix .o, $(SRC))
+$(EXENAME): $(SRC:.c=.o)
 	$(CC) $(LDFLAGS) $^ -o $@
 
-$(EXENAME).1: $(EXENAME).pod
+%.1: %.pod
 	pod2man $< | sed 's/^\.TH .*/.TH $(EXENAME) 1/' > $@
 
-$(EXENAME).pod: $(EXENAME).pod.in Metadata
+%.pod: %.pod.in Metadata
 	./replace Metadata $< > $@ || rm $@
 
-$(EXENAME).spec: $(EXENAME).spec.in Metadata
+%.spec: %.spec.in Metadata
 	./replace Metadata $< > $@ || rm $@
 
-depend: $(addsuffix .c, $(SRC)) $(addsuffix .h, $(SRC))
-	makedepend -Y $^ 2> /dev/null
+Makefile.depend: $(SRC)
+	$(CC) -MM -MG -DUSE_OWN_ABOUT_STOCK $^ > $@
 
+.PHONY: clean
 clean:
-	-rm -f $(EXENAME) $(addsuffix .o, $(SRC))
+	-rm -f $(EXENAME) $(SRC:.c=.o)
 
-distclean: clean depend
-	-rm -f $(EXENAME).spec $(EXENAME).1 Makefile.bak
+.PHONY: distclean
+distclean: clean
+	-rm -f *.spec *.pod
 
+.PHONY: realclean
+realclean: distclean
+	-rm -f *.1 Makefile.depend
+
+.PHONY: install
 install: all
 	strip      $(EXENAME)
 	install -d              $(DESTDIR)/$(BINDIR)
@@ -44,9 +52,10 @@ install: all
 	install -d              $(DESTDIR)/$(MANDIR)/man1
 	install -c $(EXENAME).1 $(DESTDIR)/$(MANDIR)/man1
 
-DISTFILES = $(addsuffix .c, $(SRC)) $(addsuffix .h, $(SRC)) $(EXTRAS)
+DISTFILES = $(SRC:.c=.h) $(SRC) $(EXTRAS)
 DISTNAME = $(EXENAME)-$(VERSION)
 
+.PHONY: dist
 dist: $(DISTFILES)
 	rm -rf /tmp/$(DISTNAME)
 	mkdir /tmp/$(DISTNAME)
@@ -54,19 +63,8 @@ dist: $(DISTFILES)
 	tar cvjf $(DISTNAME).tar.bz2 -C /tmp $(DISTNAME)/
 	rm -rf /tmp/$(DISTNAME)
 
+.PHONY: rpm
 rpm: dist $(EXENAME).spec
 	rpmbuild -ta $(DISTNAME).tar.bz2
 
-.PHONY: clean all install dist rpm depend
-
-# DO NOT DELETE
-
-util.o: util.h
-stock.o: stock.h stock_menu_about.xpm
-theme_sel.o: theme_sel.h main.h
-font_sel.o: font_sel.h main.h
-preview_pane.o: preview_pane.h util.h stock.h
-about_dialog.o: about_dialog.h util.h stock.h
-mainwin.o: main.h stock.h theme_sel.h font_sel.h preview_pane.h
-mainwin.o: about_dialog.h
-main.o: main.h stock.h mainwin.h
+include Makefile.depend
